--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -5,8 +5,34 @@ on:
     branches: [ main ]
 
 jobs:
+  dependabot:
+    runs-on: ubuntu-latest    
+    if: (github.actor == 'dependabot[bot]')
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.ref }} # Check out the head of the actual branch, not the PR
+          fetch-depth: 0 # otherwise, you will fail to push refs to dest repo
+          token: ${{ secrets.DEPENDABOT_WORKFLOW_TOKEN }}
+      - uses: pyiron/actions/update-env-files@main
+        with:
+          conda-yml: ${{ env.YML_FILE_PATHS }}
+        env:
+          YML_FILE_PATHS: "$(find . -name environment.yml)"
+      - name: UpdateDependabotPR commit
+        run: |
+          git config --local user.email "pyiron@mpie.de"
+          git config --local user.name "pyiron-runner"
+          git commit -m "[dependabot skip] Update environment" -a
+      - name: UpdateDependabotPR push
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.DEPENDABOT_WORKFLOW_TOKEN }}
+          branch: ${{ github.event.pull_request.head.ref }}
+
   build:
     runs-on: ubuntu-latest
+    if: (github.actor != 'dependabot[bot]')
     steps:
       - uses: actions/checkout@v4
       - name: Build pyiron/base
