--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,13 +11,27 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build Environment File
         run: |
+          echo -e "channels:\n  - conda-forge\n" > .condarc
           cp mpie_cmti/environment.yml environment.yml
           tail --lines=+5 base/environment.yml >> environment.yml
           tail --lines=+5 md/environment.yml >> environment.yml
           tail --lines=+5 pyiron/environment.yml >> environment.yml
-        
+      - name: Setup Mambaforge
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          python-version: "3.12"
+          miniforge-version: latest
+          condarc-file: .condarc
+          environment-file: environment.yml
+      - name: Test
+        shell: bash -l {0}
+        timeout-minutes: 30
+        run: |
+          pip install ./.ci_support --no-deps --no-build-isolation
+          pip check
 
   build:
+    needs: [pip_check]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
