--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -109,6 +109,9 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
+      - name: Ignore broken packages
+        shell: bash -l {0}
+        run: python .ci_support/checktitle.py "${{ github.event.pull_request.title }}"
       - name: Enable auto-merge for bot PRs
         run: gh pr merge --auto --squash "$PR_URL"
         env:
