--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -56,12 +56,6 @@ jobs:
           tail --lines=+5 base/environment.yml >> experimental/environment.yml
           docker build -t pyiron/experimental:latest experimental/
           docker tag pyiron/experimental:latest pyiron/experimental:"$(date +%F)"
-      - name: Build pyiron/mpie_cmti
-        timeout-minutes: 5
-        run: |
-          tail --lines=+5 pyiron/environment.yml >> mpie_cmti/environment.yml
-          docker build -t pyiron/mpie_cmti:latest mpie_cmti/
-          docker tag pyiron/mpie_cmti:latest pyiron/mpie_cmti:"$(date +%F)"
       # Publish
       - run: docker images
       - run: docker push pyiron/base:latest
@@ -76,8 +70,6 @@ jobs:
       - run: docker push pyiron/experimental:"$(date +%F)"
       - run: docker push pyiron/continuum:latest
       - run: docker push pyiron/continuum:"$(date +%F)"
-      - run: docker push pyiron/mpie_cmti:latest
-      - run: docker push pyiron/mpie_cmti:"$(date +%F)"
       # Export Environments
       - run: mkdir -p environment; chmod 777 environment
       - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/base /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_base_$(date +%F).yml;' 
@@ -86,8 +78,56 @@ jobs:
       - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/pyiron /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_pyiron_$(date +%F).yml;' 
       - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/potentialworkshop /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_potentialworkshop_$(date +%F).yml;' 
       - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/experimental /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_experimental_$(date +%F).yml;'
+      - run: ls -al environment
+      - name: cache
+        uses: actions/cache/save@v4
+        with:
+          path: environment/*.yml
+          key: all_env_$(date +%F)
+  build_cmti:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Get current date
+        id: date
+        run: echo "date=$(date +%F)" >> $GITHUB_OUTPUT
+      - name: Build pyiron/mpie_cmti
+        timeout-minutes: 5
+        run: |
+          tail --lines=+5 pyiron/environment.yml >> mpie_cmti/environment.yml
+          docker build -t pyiron/mpie_cmti:latest mpie_cmti/
+          docker tag pyiron/mpie_cmti:latest pyiron/mpie_cmti:"$(date +%F)"
+      # Publish
+      - run: docker images
+      - run: docker push pyiron/mpie_cmti:latest
+      - run: docker push pyiron/mpie_cmti:"$(date +%F)"
+      # Export Environments
+      - run: mkdir -p environment; chmod 777 environment
       - run: docker run -v $(pwd)/environment:/home/jovyan/ --rm pyiron/mpie_cmti /bin/bash -c 'source /opt/conda/bin/activate; conda env export > /home/jovyan/pyiron_mpie_cmti_$(date +%F).yml;'
       - run: ls -al environment
+      - name: cache
+        uses: actions/cache/save@v4
+        with:
+          path: environment/*.yml
+          key: cmti_env_$(date +%F)
+  release:
+    needs: [build, build_cmti]
+    runs-on: ubuntu-latest
+    steps:
+      - run: ls -al environment
+      - name: Get current date
+        id: date
+        run: echo "date=$(date +%F)" >> $GITHUB_OUTPUT
+      - name: cache_cmti
+        uses: actions/cache/restore@v4
+        with:
+          path: environment/*.yml
+          key: cmti_env_$(date +%F)
+      - name: cache
+        uses: actions/cache/restore@v4
+        with:
+          path: environment/*.yml
+          key: all_env_$(date +%F)
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
