--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -83,7 +83,7 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: environment/*.yml
-          key: all_env_$(date +%F)
+          key: all_env_${{ steps.date.outputs.date }}$
   build_cmti:
     runs-on: ubuntu-latest
     steps:
@@ -109,7 +109,7 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: environment/*.yml
-          key: cmti_env_$(date +%F)
+          key: cmti_env_${{ steps.date.outputs.date }}$
   release:
     needs: [build, build_cmti]
     runs-on: ubuntu-latest
@@ -122,12 +122,12 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: environment/*.yml
-          key: cmti_env_$(date +%F)
+          key: cmti_env_${{ steps.date.outputs.date }}$
       - name: cache
         uses: actions/cache/restore@v4
         with:
           path: environment/*.yml
-          key: all_env_$(date +%F)
+          key: all_env_${{ steps.date.outputs.date }}$
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
