--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -91,6 +91,8 @@ jobs:
       - name: Get current date
         id: date
         run: echo "date=$(date +%F)" >> $GITHUB_OUTPUT
+      - name: Login to DockerHub Registry
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Build pyiron/mpie_cmti
         timeout-minutes: 5
         run: |
