--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -102,6 +102,7 @@ jobs:
     needs: [build, build_cmti]
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
       - name: Get current date
         id: date
         run: echo "date=$(date +%F)" >> $GITHUB_OUTPUT
