Add import test in testing

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -121,6 +121,9 @@ jobs:
         with:
           path: environment/*.yml
           key: cmti_env_-${{ steps.date.outputs.date }}
+      - name: test pyiron/cmti
+        run: |
+          docker run -v $(pwd)/mpie_cmti/test:/home/jovyan/test --rm pyiron/mpie_cmti /bin/bash -c 'source /opt/conda/bin/activate; python -Werror test/import.py;'
   check:
     needs: [build, build_cmti]
     runs-on: ubuntu-latest
