--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -41,6 +41,7 @@ dependencies:
 - sphinxdft =3.1
 - sqsgenerator =0.3
 - structdbrest =0.0.1
+- sysroot_linux-64 =2.17
 - tensorflow =2.17.0
 - dscribe =2.1.1
 - landau =1.3.1
