--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -11,6 +11,7 @@ dependencies:
 - flux-core =0.64.0
 - git =2.46.0
 - gpaw =24.6.0=*openmpi*
+- gpaw-data =0.9.20000
 - jupyter-server-proxy =4.4.0
 - jupyterhub =5.2.1
 - lammps =2023.08.02=*openmpi*
