Quayio py311 ubuntu24 (#648)
* Use Quay.io for python 3.12

* Update Dockerfile

* libgl1-mesa-glx is deprecated

Using libgl1 and libglx-mesa0 instead (https://askubuntu.com/a/1520333/178692)

* Same for the cmti apt

* Pip testing.yml with 3.12

* weekly.yml with python 3.12

* change to py11 image

* Update testing.yml

* change to py311 image

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,8 +1,8 @@
-ARG ROOT_CONTAINER=jupyter/base-notebook:ubuntu-22.04@sha256:0ec801994602a53d3917d0f07ccf4474a1ddf5ae419483b24681a3c42abc4ce5
+ARG ROOT_CONTAINER=quay.io/jupyter/base-notebook:b74418220768
 ARG BASE_CONTAINER=$ROOT_CONTAINER
 FROM $BASE_CONTAINER
 
-MAINTAINER Jan Janssen <janssen@mpie.de>, Muhammad Hassani <hassani@mpie.de>
+MAINTAINER Jan Janssen <janssen@mpie.de>, Niklas Siemer <n.siemer@mpi-susmat.de>
 
 USER root
 
