--- a/mpie_cmti/Dockerfile
+++ b/mpie_cmti/Dockerfile
@@ -1,4 +1,4 @@
-ARG ROOT_IMAGE=jupyter/base-notebook:ubuntu-22.04@sha256:0ec801994602a53d3917d0f07ccf4474a1ddf5ae419483b24681a3c42abc4ce5 AS root_image
+ARG ROOT_IMAGE=quay.io/jupyter/base-notebook:b74418220768 AS root_image
 FROM $ROOT_IMAGE
 
 MAINTAINER Jan Janssen <janssen@mpie.de>, Marian Bruns <m.bruns@mpie.de>
