--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -2,48 +2,48 @@ channels:
 - conda-forge
 - nodefaults
 dependencies:
-- aimsgb =1.1.1
-- atomicrex =1.0.4
-- bader =1.0.5
-- bokeh =3.8.0
-- calphy =1.4.3
-- fitsnap3 =3.1.0.4
-- flux-core =0.64.0
-- git =2.46.0
-- gpaw =24.6.0=*openmpi*
-- gpaw-data =0.9.20000
-- jupyter-server-proxy =4.4.0
-- jupyterhub =5.2.1
-- lammps =2023.08.02=*openmpi*
-- llama-index =0.14.4
-- matgl =1.1.2
-- maxvolpy =0.3.8
-- nbgitpuller =1.2.2
-- netcdf4 =1.7.2
-- nglview =3.1.4
-- mkl =2023.2.0
-- mlip =3.0
-- numba =0.60.0
-- openkim-models =2021.01.28
-- psycopg2 =2.9.9
-- pyiron =0.5.2
-- pyiron-data =0.0.30
-- pyiron_atomistics =0.7.20
-- pyiron_base =0.15.1
-- pyiron_contrib =0.1.19
-- pyiron_potentialfit =0.3.12
-- pyiron_workflow =0.13.3
-- pyiron_gui =0.0.12
-- pyironflow =0.0.20
-- python-ace =0.3.0
-- pytorch =2.1.2
-- pyxtal =1.0.9
-- runner =1.3
-- sphinxdft =3.1
-- sqsgenerator =0.3
-- structdbrest =0.0.1
-- sysroot_linux-64 =2.17
-- tensorflow =2.17.0
-- dscribe =2.1.2
-- landau =1.4
+- aimsgb
+- atomicrex 
+- bader 
+- bokeh 
+- calphy 
+- fitsnap3 
+- flux-core 
+- git 
+- gpaw 
+- gpaw-data 
+- jupyter-server-proxy 
+- jupyterhub 
+- lammps 
+- llama-index 
+- matgl 
+- maxvolpy 
+- nbgitpuller 
+- netcdf4 
+- nglview 
+- mkl 
+- mlip 
+- numba 
+- openkim-models 
+- psycopg2 
+- pyiron 
+- pyiron-data 
+- pyiron_atomistics =0.8.1
+- pyiron_base 
+- pyiron_contrib 
+- pyiron_potentialfit 
+- pyiron_workflow 
+- pyiron_gui 
+- pyironflow 
+- python-ace
+- pytorch 
+- pyxtal 
+- runner 
+- sphinxdft 
+- sqsgenerator 
+- structdbrest 
+- sysroot_linux-64 
+- tensorflow
+- dscribe
+- landau
 - backports.tarfile
