--- a/pyiron/environment.yml
+++ b/pyiron/environment.yml
@@ -2,6 +2,6 @@ channels:
 - conda-forge
 - nodefaults
 dependencies:
-- sphinxdft =3.1
-- gpaw =24.6.0=*openmpi*
-- gpaw-data = 0.9.20000
+- sphinxdft 
+- gpaw 
+- gpaw-data 
