--- a/base/environment.yml
+++ b/base/environment.yml
@@ -2,6 +2,6 @@ channels:
 - conda-forge
 - nodefaults
 dependencies:
-- pyiron_base =0.15.1
-- git =2.46.0
-- mkl =2023.2.0
+- git =2.51.0
+- mkl =2024.2.2  # [linux]
+- pyiron_base =0.15.4
