--- a/md/environment.yml
+++ b/md/environment.yml
@@ -2,9 +2,9 @@ channels:
 - conda-forge
 - nodefaults
 dependencies:
-- pyiron =0.5.2
-- pyiron_atomistics =0.7.20
-- pyiron-data =0.0.30
+- lammps =2024.08.29=*openmpi*  # [unix]
 - nglview =3.1.4
-- lammps =2023.08.02=*openmpi*
+- pyiron =0.5.2
+- pyiron-data =0.0.30
+- pyiron_atomistics =0.8.1
 - openkim-models =2021.01.28
