--- a/potentialworkshop/environment.yml
+++ b/potentialworkshop/environment.yml
@@ -2,11 +2,11 @@ channels:
 - conda-forge
 - nodefaults
 dependencies:
-- atomicrex =1.0.3
-- runner =1.2
-- structdbrest =0.0.1
-- pyiron_potentialfit =0.3.7
-- nbgitpuller =1.2.2
-- python-ace =0.3.0
+- atomicrex =1.0.4
 - calphy =1.4.3
-- pyxtal =1.0.9
+- nbgitpuller =1.2.2
+- pyiron_potentialfit =0.3.12
+- python-ace =0.3.1 # [unix]
+- pyxtal =1.1.1
+- runner =1.3
+- structdbrest =0.0.1
