--- a/md/environment.yml
+++ b/md/environment.yml
@@ -1,10 +1,9 @@
 channels:
-- conda-forge
-- nodefaults
+  - conda-forge
+  - nodefaults
 dependencies:
-- pyiron =0.5.2
-- pyiron_atomistics =0.7.20
-- pyiron-data =0.0.30
-- nglview =3.1.4
-- lammps =2023.08.02=*openmpi*
-- openkim-models =2021.01.28
+  - lammps =2024.08.29=*openmpi*  # [unix]
+  - nglview =3.1.4
+  - pyiron =0.5.2
+  - pyiron-data =0.0.30
+  - pyiron_atomistics =0.8.1
