--- a/potentialworkshop/environment.yml
+++ b/potentialworkshop/environment.yml
@@ -1,12 +1,7 @@
 channels:
-- conda-forge
-- nodefaults
+  - conda-forge
+  - nodefaults
 dependencies:
-- atomicrex =1.0.3
-- runner =1.2
-- structdbrest =0.0.1
-- pyiron_potentialfit =0.3.7
-- nbgitpuller =1.2.2
-- python-ace =0.3.0
-- calphy =1.4.3
-- pyxtal =1.0.9
+  - calphy =1.4.3  # [unix]
+  - python-ace =0.3.1 # [unix]
+  - pyxtal =1.1.1
