--- a/pyiron/environment.yml
+++ b/pyiron/environment.yml
@@ -1,7 +1,5 @@
 channels:
-- conda-forge
-- nodefaults
+  - conda-forge
+  - nodefaults
 dependencies:
-- sphinxdft =3.1
-- gpaw =24.6.0=*openmpi*
-- gpaw-data = 0.9.20000
+  - sphinxdft =3.1  # [linux]
