add openmpi explicitly

--- a/mpie_cmti/environment.yml
+++ b/mpie_cmti/environment.yml
@@ -23,6 +23,7 @@ dependencies:
 - mlip =3.0
 - numba =0.62.1
 - openkim-models =2021.01.28
+- openmpi =5.0.8
 - psycopg2 =2.9.10
 - pyiron =0.5.2
 - pyiron-data =0.0.30
